# splguard

./: .dockerignore  .env  .env.example  BOT_TEST_RESULTS.md  BUG_FIX_MARKDOWN_ESCAPING.md  COMMANDS_FEATURE.md  COMPLETE_FIX_SUMMARY.md  DEPLOYMENT.md  Dockerfile  INSTALL_SUMMARY.md  Makefile  PRESALE_BUTTON_UPDATE.md  QUICK_START.md  README.md  SQLITE_MIGRATION.md  WELCOME_MESSAGE_PERMANENT.md  WELCOME_MESSAGE_UPDATE.md  WELCOME_UPDATE_V2.md  deploy.sh  docker-compose.redis.yml  docker-compose.yml  install.sh  pyproject.toml  quick-start.sh  requirements.txt  splguard.db
alembic/: env.py
alembic/versions/: 20240504_0001_create_initial_schema.py  20240505_0002_add_probation_fields.py  20251024_0003_add_bio_to_team_members.py  20251026_0004_add_zealy_tables.py  20251027_0005_add_member_title.py  20251027_0006_add_invite_tables.py
config/: trusted_domains.json  trusted_links.json
scripts/: populate_initial_data.py
src/splguard/: __init__.py  config.py  db.py  i18n.py  logging_setup.py  main.py  metrics.py  models.py  redis.py  seed.py  version.py  web.py
src/splguard/bot/: __init__.py  middlewares.py
src/splguard/discordbot/: __init__.py  runner.py
src/splguard/services/: admin.py  affiliates.py  audit.py  content.py  moderation.py  presale.py  presale_verifier.py  zealy.py
src/splguard/tasks/: presale_monitor.py
src/splguard/templates/: __init__.py  messages.py  style.py
src/splguard/utils/: detection.py  markdown.py  (+1 more)
tests/: __init__.py  factories.py  test_affiliates.py  test_health.py  test_moderation.py  test_templates.py  test_zealy.py
(+10 files in other folders)
