[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "splguard"
version = "0.1.0"
description = "Telegram moderation bot with aiogram, FastAPI, SQLAlchemy, and Redis."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "SplGuard Maintainers"}]
dependencies = [
  "aiogram>=3.4,<4.0",
  "fastapi>=0.110,<0.111",
  "uvicorn[standard]>=0.29,<0.30",
  "SQLAlchemy>=2.0,<3.0",
  "aiosqlite>=0.20,<0.30",
  "redis>=5.0,<6.0",
  "pydantic-settings>=2.2,<3.0",
  "httpx>=0.27,<0.28",
  "python-json-logger>=2.0,<3.0",
  "sentry-sdk>=1.40,<2.0",
  "alembic>=1.13,<2.0",
  "discord.py>=2.4,<3.0",
  "itsdangerous>=2.1,<3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "ruff>=0.3,<0.4",
]

[project.scripts]
splguard-bot = "splguard.main:run"

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
